--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@modules/app-menu": "file:./modules/app-menu/",
     "@modules/login": "file:./modules/login/",
     "@modules/onboarding": "file:./modules/onboarding/",
+    "@modules/splash": "file:./modules/splash/",
     "@modules/terms-and-conditions": "file:./modules/terms-and-conditions",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.3",
